# shell352

./: .gitignore  .vimrc  CMakeLists.txt  Makefile  README.md  command.h  compile_commands.json  tags
.cache/clangd/index/: builtin.c.29F12CECDE8A5043.idx  builtin.h.A9FF7D3B6144907A.idx  builtin_cd.c.21C7377F10D910D5.idx  builtin_exit.c.4860DC81864A68E6.idx  command_utilities.c.5B3EE0639BA5D4A0.idx  command_utilities.h.A37A43D756606691.idx  common.h.A30BB8ECDAAADB94.idx  exec.c.8521960613BD1F7F.idx  file.c.F416643D49C1A2D8.idx  file.h.346799F81CB658DB.idx  main.c.68626B06C0936BF7.idx  path.c.9475E7AB577B3C50.idx  path.h.7D9765918FB7E5CD.idx  shell352.h.38C3BD63B5FD508A.idx  string.c.52C6D202FC89CFE7.idx  string.h.49B589F014092E40.idx  symbols.h.7529FEC0623C44F7.idx
src/: builtin.c  builtin.h  builtin_cd.c  builtin_exit.c  builtin_jobs.c  exec.c  exec.h  jobs.c  jobs.h  main.c  main_grammar.c  main_pipes.c  shell352.h  symbols.h
src/builtin/: builtin_exit.c
src/buongiorno/: builtin.c  builtin.h  command.c  command.h  command_utilities.c  command_utilities.h  common.h  file.c  file.h  grammar.c  grammar.h  parse.c  parse.h  path.c  path.h  string.c  string.h  symbols.h  symbols_deprecated.h
src/buongiorno/builtin/: builtin_exit.c  builtin_exit.h
